--- a/public/html/gridlistview.html
+++ b/public/html/gridlistview.html
@@ -8,7 +8,7 @@
 
       <div ng-class="showpreid" style="background-color:{{x.color}}">
         <div style="padding:2%;">
-            <span class="glyphicon glyphicon-pushpin" ng-click="pinup(x._id,'true','false')" ng-show="icons" style="float:right;" uib-tooltip="Pin note"  tooltip-placement="bottom" tooltip-append-to-body="true"></span>
+            <span class="glyphicon glyphicon-pushpin" ng-click="pinup(x,'true','false')" ng-show="icons" style="float:right;" uib-tooltip="Pin note"  tooltip-placement="bottom" tooltip-append-to-body="true"></span>
           <div id="divtitle" class="titlecss" style="margin-left:2%;" ng-click="popup(x)" ng-bind-html = "x.title1"  ></div>
             <!-- <i id="titlecss" ></i> -->
 
@@ -25,9 +25,9 @@
                     <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
                       <li id="fulldrop">
                               <a id="normal" style="font-size:16px">Reminder:</a>
-                              <a id="drop" ng-click=createReminder(x._id,'today',20) href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
-                              <a id="drop" ng-click=createReminder(x._id,'tomorrow',8) href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
-                              <a id="drop" ng-click=createReminder(x._id,'nextweek',8) href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
+                              <a id="drop" ng-click=createReminder(x,'today',20) href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
+                              <a id="drop" ng-click=createReminder(x,'tomorrow',8) href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
+                              <a id="drop" ng-click=createReminder(x,'nextweek',8) href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
                               <b id="drop" style="margin-left:18px;">Pick Date and Time:</b>
                               <div class="dropdown" style="width: 50%; padding-top: 10px; padding-bottom: 10px">
                                   <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" >
@@ -35,7 +35,7 @@
                                           <input type="text" class="form-control" data-ng-model="toDo.remainder" name="remainder" placeholder="Pick date & time">
                                                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                           </div>
-                                          <a ng-click="createReminder(x._id,toDo.remainder)" >
+                                          <a ng-click="createReminder(x,toDo.remainder)" >
                                             <span id="saveReminder" style="margin-left:56px;color:teal;">Save</span></a>
                                     </a>
 
@@ -58,18 +58,18 @@
                       </a>
                       <div uib-dropdown-menu aria-labelledby="simple-dropdown">
                           <a id="normal" ng-repeat = "y in color" style="font-size:10px;" uib-tooltip="{{y.tooltip}}" tooltip-placement="bottom" tooltip-append-to-body="true" >
-                                <img ng-src="{{y.path}}"  ng-click="changeColor(y.color,x._id)">
+                                <img ng-src="{{y.path}}"  ng-click="changeColor(y.color,x)">
                             </a>
                         </div>
                   </span>
                 </i>
 
                 <i style="margin-left:8px" style="font-size:36px;" aria-hidden="true">
-                  <img id='archive'  ng-click="archive(x._id,'true','false')" style="width:14px;height:35%;cursor:pointer;" src="../images/archive.png" uib-tooltip="Archive"  tooltip-placement="bottom" tooltip-append-to-body="true" />
+                  <img id='archive'  ng-click="archive(x,'true','false')" style="width:14px;height:35%;cursor:pointer;" src="../images/archive.png" uib-tooltip="Archive"  tooltip-placement="bottom" tooltip-append-to-body="true" />
                 </i>
 
         <i style="margin-left:8px" style="font-size:36px;" aria-hidden="true">
-              <img id='archive'  ng-click="facebookshare(x)" style="width:16px;height:35%;cursor:pointer;" src="../images/share.png" uib-tooltip="Share with Facebook"  tooltip-placement="bottom" tooltip-append-to-body="true" />
+              <img id='archive'  ng-click="facebookshare()" style="width:16px;height:35%;cursor:pointer;" src="../images/share.png" uib-tooltip="Share with Facebook"  tooltip-placement="bottom" tooltip-append-to-body="true" />
         </i>
 
          <i style="margin-left:6px">
@@ -79,7 +79,7 @@
                   </a>
                   <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
                         <li id="fulldrop">
-                            <a id="delete" ng-click = "deletecards(x._id,'trash')">Delete a note</a>
+                            <a id="delete" ng-click = "deletecards(x,'trash')">Delete a note</a>
                             <a id="makeCopy" ng-click = "cardCopy(x)">Make a copy</a>
                         </li>
                     </ul>
@@ -101,9 +101,9 @@
             <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
               <li id="fulldrop">
                       <a id="normal" style="font-size:16px">Reminder:</a>
-                      <a id="drop" ng-click=createReminder(x._id,'today',20) href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
-                      <a id="drop" ng-click=createReminder(x._id,'tomorrow',8) href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
-                      <a id="drop" ng-click=createReminder(x._id,'nextweek',8) href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
+                      <a id="drop" ng-click=createReminder(x,'today',20) href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
+                      <a id="drop" ng-click=createReminder(x,'tomorrow',8) href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
+                      <a id="drop" ng-click=createReminder(x,'nextweek',8) href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
                       <b id="drop" style="margin-left:18px;">Pick Date and Time:</b>
                       <div class="dropdown" style="width: 50%; padding-top: 10px; padding-bottom: 10px">
                           <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" >
@@ -111,7 +111,7 @@
                                   <input type="text" class="form-control" data-ng-model="toDo.remainder" name="remainder" placeholder="Pick date & time">
                                         <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                   </div>
-                                  <a ng-click="createReminder(x._id,toDo.remainder)" >
+                                  <a ng-click="createReminder(x,toDo.remainder)" >
                                     <span id="saveReminder" style="margin-left:56px;color:teal;">Save</span></a>
                             </a>
 
@@ -122,7 +122,7 @@
                       </li>
                     </ul>
                   </span>
-            <span class="glyphicon glyphicon-remove-circle" id="removecircle" ng-click = "deleteReminder(x._id)" style="font-size:14px;float:right;" uib-tooltip="Delete reminder"  tooltip-placement="bottom" tooltip-append-to-body="true"></span>
+            <span class="glyphicon glyphicon-remove-circle" id="removecircle" ng-click = "deleteReminder(x)" style="font-size:14px;float:right;" uib-tooltip="Delete reminder"  tooltip-placement="bottom" tooltip-append-to-body="true"></span>
       </div>
 
     </div>
