--- a/public/html/trash.html
+++ b/public/html/trash.html
@@ -23,8 +23,8 @@
                           </a>
                           <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
                                 <li id="fulldrop">
-                                    <a id="delete" ng-click = "deletecards(x._id,'delete')">Delete forever</a>
-                                    <a id="makeCopy" ng-click = "deletecards(x._id,'restore')">Restore</a>
+                                    <a id="delete" ng-click = "deletecards(x,'delete')">Delete forever</a>
+                                    <a id="makeCopy" ng-click = "deletecards(x,'restore')">Restore</a>
                                 </li>
                             </ul>
                       </span>
