--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
 	 <script src="controller/reminderController.js"></script>
 	 <script src="controller/trashController.js"></script>
 	 <script src="controller/collaboratorController.js"></script>
+	 <script src="controller/activityController.js"></script>
 
 </head>
 
