--- a/public/html/activity.html
+++ b/public/html/activity.html
@@ -1,15 +1,4 @@
-<!-- <div class="row" style="margin-top:34px;">
-
-
-  <div>
-      <div id="innote" ng-repeat="x in activityDisplay" >
-        <div ng-bind-html="x.message"></div>
-
-
-      </div>
-  </div>
-</div> -->
-
+<!-- activity logger html -->
 <div style="margin-top:150px;">
 
 <div class="addActivity row" >
