--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -20,7 +20,6 @@
           </button>
       </div>
 
-      <!-- <div><img id="watermark" src="../images/logo4.png"></div> -->
 
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -35,12 +34,11 @@
           <li>
             <p class="navbar-text" id="textColor">
               <span class="list-style-buttons" id="textColor">
-                <!-- <span class="dropup" data-toggle="tooltip" data-placement="auto" title="Refresh"> -->
                  <a id="gridview1" uib-tooltip="Grid view" tooltip-placement="bottom" tooltip-append-to-body="true">
-                   <span class="glyphicon glyphicon-th" id="gridgly" ng-style="gridstyle" style="margin-left:4%;margin-top:3px;" ng-click="gridview()">
+                    <span class="glyphicon glyphicon-th" id="gridgly" ng-style="gridstyle" style="margin-left:4%;margin-top:3px;" ng-click="gridview()">
                    </a>
                    <a id="listview1" uib-tooltip="List view" tooltip-placement="bottom" tooltip-append-to-body="true">
-                     <span class="glyphicon glyphicon-align-justify" id="listgly" ng-style="liststyle" style="display:none;margin-left:5%;margin-top:3px;" ng-click="listview()" >
+                      <span class="glyphicon glyphicon-align-justify" id="listgly" ng-style="liststyle" style="display:none;margin-left:5%;margin-top:3px;" ng-click="listview()" >
                    </a>
                  </span>
                </span>
@@ -69,17 +67,15 @@
                      </div>
 
                      <div class="profile2">
-                        <!-- <span style="position: absolute; padding: 14px 0px 0px 32px; font-size: 1.8em; font-weight: bold;"> </span> -->
                          <span style="position: absolute; padding: 50px 0px 0px 32px; font-size: 1.2em;"></span>
-                        <div class="profile3">
-                        </div>
+                         <div class="profile3">  </div>
                      </div>
                      <hr style="margin-top:10px;">
-                       <div class="social-buttons" id="acbuttons" style="margin-left:6%;background: #E8E8E8;">
 
-                         <a><span style="margin-left:25%"></span></a>
-                         <a href="#" class="btn btn-tw" style="background: #E8E8E8;border: 1px solid #c6c6c6;" id="logOutId" ng-click="logOut()" aria-hidden="true" >
-                           <span class="glyphicon glyphicon-off"  style="color:teal;">Sign out</span>
+                       <div class="social-buttons" id="acbuttons" style="margin-left:6%;background: #E8E8E8;">
+                          <a><span style="margin-left:25%"></span></a>
+                          <a href="#" class="btn btn-tw" style="background: #E8E8E8;border: 1px solid #c6c6c6;" id="logOutId" ng-click="logOut()" aria-hidden="true" >
+                              <span class="glyphicon glyphicon-off"  style="color:teal;">Sign out</span>
                          </a>
                        </div>
                   </div>
@@ -143,23 +139,14 @@
             </a>
           </li>
 
-          <!-- <li>
-            <a ui-sref="activity"><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> Activity Log</a>
-          </li> -->
-
           <li>
             <a ui-sref="activity"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Activity Log</a>
           </li>
-          <!-- <li>
-            <span class="glyphicon glyphicon-search" aria-hidden="true" ></span>
-            <font color="#337AB7"> ADMINISTRATION</font>
-          </li> -->
+
           <li>
-            <a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Users</a>
+            <a ui-sref="activity"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>  Log-out</a>
           </li>
-          <li>
-            <a href="#"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Messages</a>
-          </li>
+
         </ul>
       </div>
       <!-- /#sidebar-wrapper -->
