--- a/public/html/about.html
+++ b/public/html/about.html
@@ -7,8 +7,8 @@
 
              <ul class="nav navbar-nav navbar-right">
                <li><a href="#"><span class="fa fa-home"></span> Home</a></li>
-               <li><a href="#login"><span class="fa fa-shield"></span> LOGIN</a></li>
-               <li><a href="#signup"><span class="fa fa-comment"></span> signup</a></li>
+               <li><a ui-sref="login"><span class="fa fa-shield"></span> Login</a></li>
+               <li><a ui-sref=="signup"><span class="fa fa-comment"></span> signup</a></li>
              </ul>
                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                      <span class="sr-only">Toggle navigation</span>
