--- a/public/html/dashboard.html
+++ b/public/html/dashboard.html
@@ -74,7 +74,7 @@
 
                        <div class="social-buttons" id="acbuttons" style="margin-left:6%;background: #E8E8E8;">
                           <a><span style="margin-left:25%"></span></a>
-                          <a href="#" class="btn btn-tw" style="background: #E8E8E8;border: 1px solid #c6c6c6;" id="logOutId" ng-click="logOut()" aria-hidden="true" >
+                          <a ui-sref="login" class="btn btn-tw" style="background: #E8E8E8;border: 1px solid #c6c6c6;" id="logOutId" ng-click="logOut()" aria-hidden="true" >
                               <span class="glyphicon glyphicon-off"  style="color:teal;">Sign out</span>
                          </a>
                        </div>
@@ -124,18 +124,18 @@
 
           <li>
             <a ui-sref="archive">
-              <span class="glyphicon glyphicon-circle-arrow-down" aria-hidden="true" ui-sref="archive" ng-click ="archive()"></span> Archive
+              <img src="./images/sidebarArchive.svg" style="margin-left:14px"/>
+              <span aria-hidden="true" ui-sref="archive" ng-click ="archive()" ></span>Archive
+
+              <!-- <span class="glyphicon glyphicon-circle-arrow-down" aria-hidden="true" ui-sref="archive" ng-click ="archive()"></span> Archive -->
             </a>
           </li>
 
 
           <li>
             <a ui-sref="trash" >
-              <svg width="24px" xmlns="http://www.w3.org/2000/svg" fill="#000000" viewBox="0 0 24 24" height="20px" style="margin-left:14px;margin-top:8px;">
-                <path d="m0 0h24v24h-24z" fill="none"></path>
-                <path d="m6 19c0 1.1 0.9 2 2 2h8c1.1 0 2-0.9 2-2v-12h-12v12zm13-15h-3.5l-1-1h-5l-1 1h-3.5v2h14v-2z" fill="grey"></path>
-              </svg>
-              <span aria-hidden="true" ui-sref="trash" ng-click ="deleteCardsData()"></span>Trash
+              <img src="./images/sidebarTrash _new.svg" style="margin-left:14px"/>
+              <span aria-hidden="true" ui-sref="trash" ng-click ="deleteCardsData()" ></span>Trash
             </a>
           </li>
 
@@ -144,7 +144,9 @@
           </li>
 
           <li>
-            <a ui-sref="activity"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>  Log-out</a>
+            <a ui-sref="login">
+              <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+              <span ng-click="logOut()" ui-sref="login" style="margin-left:1px">Log-out</span>  </a>
           </li>
 
         </ul>
