--- a/public/html/gridlistview.html
+++ b/public/html/gridlistview.html
@@ -69,7 +69,7 @@
                 </i>
 
         <i style="margin-left:8px" style="font-size:36px;" aria-hidden="true">
-              <img id='archive'  ng-click="facebookshare()" style="width:16px;height:35%;cursor:pointer;" src="../images/share.png" uib-tooltip="Share with Facebook"  tooltip-placement="bottom" tooltip-append-to-body="true" />
+              <img id='archive'  ng-click="facebookshare(x)" style="width:16px;height:35%;cursor:pointer;" src="../images/share.png" uib-tooltip="Share with Facebook"  tooltip-placement="bottom" tooltip-append-to-body="true" />
         </i>
 
          <i style="margin-left:6px">
