activity and comment completed

--- a/public/html/pinup.html
+++ b/public/html/pinup.html
@@ -26,9 +26,10 @@
                     <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
                       <li id="fulldrop">
                               <a id="normal" style="font-size:16px">Reminder:</a>
-                              <a id="drop" ng-click=createReminder(x,'today',20) href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
-            <a id="drop" ng-click=createReminder(x, 'tomorrow',8) href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
-            <a id="drop" ng-click=createReminder(x, 'nextweek',8) href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
+
+                              <a id="drop" ng-click="createReminder(x,'today',20)" href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
+            <a id="drop" ng-click="createReminder(x, 'tomorrow',8)" href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
+            <a id="drop" ng-click="createReminder(x, 'nextweek',8)" href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
             <b id="drop" style="margin-left:18px;">Pick Date and Time:</b>
             <div class="dropdown" style="width: 50%; padding-top: 10px; padding-bottom: 10px">
               <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown">
@@ -102,9 +103,10 @@
             <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
               <li id="fulldrop">
                 <a id="normal" style="font-size:16px">Reminder:</a>
-                <a id="drop" ng-click=createReminder(x, 'today',20) href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
-                <a id="drop" ng-click=createReminder(x, 'tomorrow',8) href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
-                <a id="drop" ng-click=createReminder(x, 'nextweek',8) href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
+
+                <a id="drop" ng-click="createReminder(x,'today',20)" href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
+                <a id="drop" ng-click="createReminder(x, 'tomorrow',8)" href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
+                <a id="drop" ng-click="createReminder(x, 'nextweek',8)" href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
                 <b id="drop" style="margin-left:18px;">Pick Date and Time:</b>
                 <div class="dropdown" style="width: 50%; padding-top: 10px; padding-bottom: 10px">
                   <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown">
