--- a/public/html/reminder.html
+++ b/public/html/reminder.html
@@ -27,10 +27,10 @@
                     <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
                       <li id="fulldrop">
                               <a id="normal" style="font-size:16px">Reminder:</a>
-                              <a id="drop" ng-click=createReminder(x,'today',20) href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
-            <a id="drop" ng-click=createReminder(x, 'tomorrow',8) href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
-            <a id="drop" ng-click=createReminder(x, 'nextweek',8) href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
-            <b id="drop" style="margin-left:18px;">Pick Date and Time:</b>
+                              <a id="drop" ng-click="createReminder(x,'today',20)" href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
+            <a id="drop" ng-click="createReminder(x, 'tomorrow',8)" href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
+            <a id="drop" ng-click="createReminder(x, 'nextweek',8)" href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
+            <b style="margin-left:18px;">Pick Date and Time:</b>
             <div class="dropdown" style="width: 50%; padding-top: 10px; padding-bottom: 10px">
               <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown">
                 <div class="input-group" style="width:126px;margin-left:18px;">
@@ -47,6 +47,7 @@
             </li>
             </ul>
             </span>
+
             <i>
 
                 <i style="margin-left:8px" class="fa fa-user-plus" style="font-size:36px" aria-hidden="true"> </i>
@@ -104,10 +105,10 @@
             <ul uib-dropdown-menu aria-labelledby="simple-dropdown">
               <li id="fulldrop">
                 <a id="normal" style="font-size:16px">Reminder:</a>
-                <a id="drop" ng-click=createReminder(x, 'today',20) href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
-                <a id="drop" ng-click=createReminder(x, 'tomorrow',8) href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
-                <a id="drop" ng-click=createReminder(x, 'nextweek',8) href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
-                <b id="drop" style="margin-left:18px;">Pick Date and Time:</b>
+                <a id="drop" ng-click="createReminder(x,'today',20)" href>Later today<span id="mov" style="margin-left:20%;">20:00</span></a>
+                <a id="drop" ng-click="createReminder(x, 'tomorrow',8)" href>Tomorrow<span id="mov" style="margin-left:27%;">08:00</span></a>
+                <a id="drop" ng-click="createReminder(x, 'nextweek',8)" href>Next week<span id="mov" style="margin-left:24%;">08:00</span></a>
+                <b style="margin-left:18px;">Pick Date and Time:</b>
                 <div class="dropdown" style="width: 50%; padding-top: 10px; padding-bottom: 10px">
                   <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown">
                     <div class="input-group" style="width:126px;margin-left:18px;">
