--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,6 @@
 		<script src="https://connect.facebook.net/enUS/all.js"></script>
 
 
-
 		<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
 
@@ -41,6 +40,7 @@
 
 	 <script src="js/app.js"></script>
 	 <script src="services/dashboardServices.js"></script>
+	 <script src="directives/iconsdirective.js"></script>
 
 	 <script src="controller/loginController.js"></script>
 	 <script src="controller/signupController.js"></script>
@@ -52,6 +52,7 @@
 	 <script src="controller/trashController.js"></script>
 	 <script src="controller/collaboratorController.js"></script>
 	 <script src="controller/activityController.js"></script>
+
 
 </head>
 
